<resources>

    <!-- Application -->
    <string name="app_name">Media Player</string>
    <string name="home">Home</string>
    <string name="song">Song</string>
    <string name="playlist">Playlist</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>


    <!-- Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="grant_permission">GRANT PERMISSION</string>
    <string name="check_permission">Check Permission</string>

    <string name="example">Example</string>
    <string name="unknown">Unknown</string>
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="search">Search</string>
    <string name="good_evening">Good Evening</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="most_played">Most Played</string>
    <string name="shuffle">Shuffle</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="suggestions">Suggestions</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>

    <!-- Services -->
    <string name="media_player">Media Player</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="android_10_song_should_be_inside_the_music_folder">Android 10 Song Should Be Inside The MUSIC Folder</string>
    <string name="details">Details</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="go_to_album">Go to Album</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="_00_00">00:00</string>
    <string name="repeat">Repeat</string>
    <string name="filter">Filter</string>

</resources>