<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/playingMenu">
        <item
            android:id="@+id/menu_details"
            android:title="@string/details"
            app:showAsAction="never">
        </item>
        <item
            android:id="@+id/menu_gotoArtist"
            android:title="@string/go_to_artist">
        </item>
        <item
            android:id="@+id/menu_gotoAlbum"
            android:title="@string/go_to_album">
        </item>
        <item
            android:id="@+id/menu_addToPlaylist"
            android:title="@string/add_to_playlist">
        </item>
        <item
            android:id="@+id/menu_share"
            android:title="@string/share">
        </item>
    </group>

</menu>