<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navBottomHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home_white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navBottomSong"
        android:title="@string/song"
        android:icon="@drawable/ic_music_note_white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navPlaylist"
        android:title="@string/playlist"
        android:icon="@drawable/ic_music_queue_white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navAlbum"
        android:title="@string/album"
        android:icon="@drawable/ic_music_library_white"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white"
        app:showAsAction="ifRoom"/>

</menu>