<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crlHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:elevation="0dp"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablHome"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlHome"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:titleEnabled="false"
            app:contentScrim="@color/transparent"
            app:layout_scrollFlags="scroll|snap|enterAlways">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tbLib"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:translationY="-5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/home"
                app:titleCentered="true"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cslHomeNested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/widgetBackground"
                app:cardElevation="10dp"
                app:layout_constraintDimensionRatio="18:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cslCv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="1"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/good_evening"
                        android:textColor="@color/widgetColor"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        app:layout_constraintDimensionRatio="30:9"
                        app:layout_constraintEnd_toEndOf="@+id/ibCV1"
                        app:layout_constraintStart_toStartOf="@+id/ibCV1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibCV1"
                        style="@style/HomeMenuButton"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/history"
                        app:icon="@drawable/ic_history_24"
                        app:layout_constraintBottom_toTopOf="@+id/ibCV2"
                        app:layout_constraintEnd_toStartOf="@+id/ibCV3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibCV2"
                        style="@style/HomeMenuButton"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/most_played"
                        app:icon="@drawable/ic_baseline_trending_up_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ibCV4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ibCV1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibCV3"
                        style="@style/HomeMenuButton"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/favorite"
                        app:icon="@drawable/ic_favorite_border_24"
                        app:layout_constraintBottom_toTopOf="@+id/ibCV4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ibCV1"
                        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibCV4"
                        style="@style/HomeMenuButton"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/shuffle"
                        app:icon="@drawable/ic_baseline_shuffle_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ibCV2"
                        app:layout_constraintTop_toBottomOf="@+id/ibCV3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvSuggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/suggestions"
                android:textColor="@color/widgetColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cv1"
                app:layout_constraintTop_toBottomOf="@id/cv1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSuggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSuggest"
                app:layout_constraintTop_toBottomOf="@id/tvSuggest" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/artist"
                android:textColor="@color/widgetColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cv1"
                app:layout_constraintTop_toBottomOf="@id/rvSuggestion" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSuggest"
                app:layout_constraintTop_toBottomOf="@id/tvArtist" />

            <TextView
                android:id="@+id/tvAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/album"
                android:textColor="@color/widgetColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/cv1"
                app:layout_constraintTop_toBottomOf="@id/rvArtist" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvSuggest"
                app:layout_constraintTop_toBottomOf="@id/tvAlbum" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>